@@ -1,5 +1,6 @@
 0.07
  - Add <?xml> header to XML document.
+ - Add lines to XML document.
  - Add Map::Tube::Budapest to SEE ALSO section in doc.
  - Add Map::Tube::Graph to SEE ALSO section in doc.
  - Add Map::Tube::Nanjing to SEE ALSO section in doc.
